8222259: Shenandoah: Pre-evacuate string-dedup roots in Traversal GC

Reviewed-by: shade